You can tell me if this is the "correct" way to fix the padding/ font size on small mobile. But it works as far as I can tell.

--- a/less/bm.less
+++ b/less/bm.less
@@ -45,7 +45,14 @@ body {
       color: darken(#fff, 15%);
     }
   }
-
+  @media (min-width: 100px) {
+    font-size: 20px;
+    padding: 0;
+  }
+  @media (min-width: 350px) {
+    font-size: 21px;
+    padding: 5
+  }
   @media (min-width: 1000px) {
     font-size: @nav-font-size-medium;
   }
